--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 </div>
             </div>
             <div class="boxs">
-                <img class="image" src="image/peyzaj resmi 2.jpg" width="" alt="">
+                <img class="image" src="image/peyzaj-resmi-2.jpg" width="" alt="">
                 <div class="content">
                     <img src="image/park.png" alt="">
                     <h3 data-lang="Landscape Construction">Landscape Construction</h3>
