--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
             <div class="box">
                 <p><i class="fas fa-envelope"></i>uysalconstruction@gmail.com</p>
                 <p><i class="fas fa-envelope"></i>uysalconstruction@hotmail.com</p>
-                <p><i class="fas fa-phone"></i>(+994)-50-645-08-23</p>
+                <p><i class="fas fa-phone"></i></p>
                 <p><i class="fas fa-map-marker-alt"></i>Xetai Reyonu Afiyeddin Celilov 20 Menzil 51 Kat 10
                     Baku/Azerbaijan</p>
             </div>
