--- a/index.html
+++ b/index.html
@@ -94,8 +94,56 @@
 
                     </div>
                 </div>
+                <div class="slide">
+                    <img src="image/slide 6.jpeg" alt="">
+                    <div class="info">
+
+
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="image/slide 7.jpg" alt="">
+                    <div class="info">
+
+
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="image/slide 8.png" alt="">
+                    <div class="info">
+
+
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="image/slide 9.jpg" alt="">
+                    <div class="info">
+
+
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="image/slide 10.png" alt="">
+                    <div class="info">
+
+
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="image/slide 11.jpeg" alt="">
+                    <div class="info">
+
+
+                    </div>
+                </div>
                 <div class="navigation">
-                    <div class="btn active"></div>
+                   <div class="btn active"></div>
+                    <div class="btn"></div>
+                    <div class="btn"></div>
+                    <div class="btn"></div>
+                    <div class="btn"></div>
+                    <div class="btn"></div>
+                    <div class="btn"></div>
                     <div class="btn"></div>
                     <div class="btn"></div>
                     <div class="btn"></div>
