--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/jpg" href="image/uysal construction logo.png">
+    <link rel="icon" type="image/png" href="image/Uysal Construction Logo v22.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -18,7 +18,7 @@
     <header>
         <input type="checkbox" name="" id="toggler">
         <label for="toggler" class="fas fa-bars"></label>
-        <a href="index.html" class="logo"><img src="image/uysal construction logo.png" alt=""></a>
+        <a href="index.html" class="logo"><img src="image/Uysal Construction Logo v22.png" alt=""></a>
         <nav class="navbar">
             <a href="index.html" data-lang="Home Page">Home Page</a>
             <a href="about.html" data-lang="About">About</a>
