--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         <div class="box-container">
             <div class="box">
                 <div class="image">
-                    <a href="../Html/projects.html"><img
+                    <a href=".projects.html"><img
                             src="image/Green Mountain Power Peterson Hydroelectric Plant Modernization.jpg"
                             alt=""></a>
                 </div>
@@ -260,7 +260,7 @@
             </div>
             <div class="box">
                 <div class="image">
-                    <a href="../Html/projects.html"><img
+                    <a href="projects.html"><img
                             src="image/Green Mountain Power Penstock Replacements and Uprades.jpg" alt=""></a>
                 </div>
                 
