--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <button><i class="fa fa-play"></i> Watch Video</button>
         </div>
         <div class="trailer">
-            <video src="image/About home video.mp4" controls="true"></video>
+            <video src="image/home page about video v2.mp4" controls="true"></video>
 
             <span class="close">&times;</span>
         </div>
