--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
             <div class="box">
                 <div class="image">
                     <a href="image/Green Mountain Power Peterson Hydroelectric Plant Modernization.jpg"
-                        data-lightbox="models" data-title="Caption1">
+                        data-lightbox="models" data-title="">
                         <img src="image/Green Mountain Power Peterson Hydroelectric Plant Modernization.jpg" alt="">
                     </a>
                 </div>
@@ -63,7 +63,7 @@
             <div class="box">
                 <div class="image">
                     <a href="image/Green Mountain Power Penstock Replacements and Uprades.jpg" data-lightbox="models"
-                        data-title="Caption1">
+                        data-title="">
                         <img src="image/Green Mountain Power Penstock Replacements and Uprades.jpg" alt="">
                     </a>
                 </div>
@@ -72,7 +72,7 @@
             <div class="box">
                 <div class="image">
                     <a href="image/Project LLBean Order Fulfillment Center Expansion.jpg" data-lightbox="models"
-                        data-title="Caption1">
+                        data-title="">
                         <img src="image/Project LLBean Order Fulfillment Center Expansion.jpg" alt="">
                     </a>
                 </div>
@@ -81,7 +81,7 @@
             <div class="box">
                 <div class="image">
                     <a href="image/Project_Atlanta-Water-Supply-Program_01.jpg" data-lightbox="models"
-                        data-title="Caption1">
+                        data-title="">
                         <img src="image/Project_Atlanta-Water-Supply-Program_01.jpg" alt="">
                     </a>
                 </div>
@@ -90,7 +90,7 @@
             <div class="box">
                 <div class="image">
                     <a href="image/Mylan Technologies Pharmaceutical Manufacturing Expansion.jpg"
-                        data-lightbox="models" data-title="Caption1">
+                        data-lightbox="models" data-title="">
                         <img src="image/Mylan Technologies Pharmaceutical Manufacturing Expansion.jpg" alt="">
                     </a>
                 </div>
@@ -99,7 +99,7 @@
             <div class="box">
                 <div class="image">
                     <a href="image/Southwestern Vermont Medical Center.jpg" data-lightbox="models"
-                        data-title="Caption1">
+                        data-title="">
                         <img src="image/Southwestern Vermont Medical Center.jpg" alt="">
                     </a>
                 </div>
