--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <div class="box">
                 <div class="image">
                     <a href="projects.html"><img
-                            src="image/Green Mountain Power Peterson Hydroelectric Plant Modernization.jpg"
+                            src="image/proje 1.jpeg"
                             alt=""></a>
                 </div>
                 
@@ -261,7 +261,7 @@
             <div class="box">
                 <div class="image">
                     <a href="projects.html"><img
-                            src="image/Green Mountain Power Penstock Replacements and Uprades.jpg" alt=""></a>
+                            src="image/proje 2.jpeg" alt=""></a>
                 </div>
                 
             </div>
@@ -275,7 +275,7 @@
             <div class="box">
                 <p><i class="fas fa-envelope"></i>uysalconstruction@gmail.com</p>
                 <p><i class="fas fa-envelope"></i>uysal-construction@hotmail.com</p>
-                <p><i class="fas fa-phone"></i> (+994)-10-424-23-23</p>
+                <p><i class="fas fa-phone"></i> (+99410)424-23-23</p>
                 <p><i class="fas fa-map-marker-alt"></i>Xetai Reyonu Afiyeddin Celilov 20 Menzil 51 Kat 10
                     Baku/Azerbaijan</p>
             </div>
