--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <div class="box">
                 <div class="image">
                     <a href="projects.html"><img
-                            src="image/proje 1.jpeg"
+                            src="image/Zərifə Əliyeva küçəsi 50-52.jpeg"
                             alt=""></a>
                 </div>
                 
@@ -261,7 +261,7 @@
             <div class="box">
                 <div class="image">
                     <a href="projects.html"><img
-                            src="image/proje 2.jpeg" alt=""></a>
+                            src="image/Zərifə Əliyeva küçəsi 40-48.jpeg" alt=""></a>
                 </div>
                 
             </div>
