--- a/index.html
+++ b/index.html
@@ -256,12 +256,18 @@
                             src="image/Zərifə Əliyeva küçəsi 50-52.jpeg"
                             alt=""></a>
                 </div>
+                <div class="content">
+                    <h3>Zərifə Əliyeva küçəsi 50-52</h3>
+                </div>
                 
             </div>
             <div class="box">
                 <div class="image">
                     <a href="projects.html"><img
                             src="image/Zərifə Əliyeva küçəsi 40-48.jpeg" alt=""></a>
+                </div>
+                 <div class="content">
+                    <h3>Zərifə Əliyeva küçəsi 40-48</h3>
                 </div>
                 
             </div>
