--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 
         <div class="row">
             <div class="image">
-                <img src="image/zyro-image (9).png" alt="">
+                <img src="image/about images 1.jpeg" alt="">
             </div>
             <div class="content">
                 <h3 data-lang="We Build for the People">We Build for the People</h3>
@@ -69,7 +69,7 @@
         </div>
         <div class="row reverse">
             <div class="image">
-                <img src="image/imagess.jpg" alt="">
+                <img src="image/about images 2.jpeg" alt="">
             </div>
             <div class="content">
                 <h3 data-lang="Our goal A Better World">Our goal A Better World</h3>
@@ -88,7 +88,7 @@
         </div>
         <div class="row">
             <div class="image">
-                <img src="image/About image.jpg" alt="">
+                <img src="image/about images 3.jpeg" alt="">
             </div>
             <div class="content">
                 <h3 data-lang="About Our Construction Company">About Our Construction Company</h3>
