--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 
         <div class="row">
             <div class="image">
-                <img src="image/about images 1.jpeg" alt="">
+                <img src="image/about images 1.jpg" alt="">
             </div>
             <div class="content">
                 <h3 data-lang="We Build for the People">We Build for the People</h3>
