--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
                     <a href="image/Zərifə Əliyeva küçəsi 50-52.jpeg" data-lightbox="models" data-title="Caption1">
                         <img src="image/Zərifə Əliyeva küçəsi 50-52.jpeg" alt="">
                         <div class="content">
-                            <h3>Zərifə Əliyeva küçəsi 50-52</h3>
+                            <h3>Zərifə Əliyeva küçəsi 50-52 <p data-lang="(Repairs)">  (Repairs)</p></h3>
                         </div>
                     </a>
                 </div>
@@ -67,7 +67,7 @@
                     <a href="image/Zərifə Əliyeva küçəsi 40-48.jpeg" data-lightbox="models" data-title="Caption1">
                         <img src="image/Zərifə Əliyeva küçəsi 40-48.jpeg" alt="">
                         <div class="content">
-                            <h3>Zərifə Əliyeva küçəsi 40-48</h3>
+                            <h3>Zərifə Əliyeva küçəsi 40-48 <p data-lang="(Repairs)">  (Repairs)</p></h3>
                         </div>
                     </a>
                 </div>
@@ -78,7 +78,7 @@
                     <a href="image/Şövkət Ələkbərova küçəsi 9-17.jpeg" data-lightbox="models" data-title="Caption1">
                         <img src="image/Şövkət Ələkbərova küçəsi 9-17.jpeg" alt="">
                         <div class="content">
-                            <h3>Şövkət Ələkbərova küçəsi 9-17</h3>
+                            <h3>Şövkət Ələkbərova küçəsi 9-17 <p data-lang="(Repairs)">  (Repairs)</p></h3>
                         </div>
                     </a>
                 </div>
@@ -89,7 +89,7 @@
                     <a href="image/Şövkət Ələkbərova küçəsi 12.jpeg" data-lightbox="models" data-title="Caption1">
                         <img src="image/Şövkət Ələkbərova küçəsi 12.jpeg" alt="">
                         <div class="content">
-                            <h3>Şövkət Ələkbərova küçəsi 12</h3>
+                            <h3>Şövkət Ələkbərova küçəsi 12 <p data-lang="(Repairs)">  (Repairs)</p></h3>
                         </div>
                     </a>
                 </div>
@@ -100,7 +100,7 @@
                     <a href="image/Adil İsgəndərov küçəsi 16-24.jpeg" data-lightbox="models" data-title="Caption1">
                         <img src="image/Adil İsgəndərov küçəsi 16-24.jpeg" alt="">
                         <div class="content">
-                            <h3>Adil İsgəndərov küçəsi 16-24</h3>
+                            <h3>Adil İsgəndərov küçəsi 16-24 <p data-lang="(Repairs)">  (Repairs)</p></h3>
                         </div>
                     </a>
                 </div>
@@ -111,7 +111,7 @@
                     <a href="image/Şövkət Ələkbərova küçəsi 25-27.jpeg" data-lightbox="models" data-title="Caption1">
                         <img src="image/Şövkət Ələkbərova küçəsi 25-27.jpeg" alt="">
                         <div class="content">
-                            <h3>Şövkət Ələkbərova küçəsi 25-27</h3>
+                            <h3>Şövkət Ələkbərova küçəsi 25-27 <p data-lang="(Repairs)">  (Repairs)</p></h3>
                         </div>
                     </a>
                 </div>
